adding more code

--- a/index.html
+++ b/index.html
@@ -19,20 +19,37 @@
     <h1>Powered by Technology</h1>
 
     <p>Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful</p>
+      to ensure that your project is successful
+    </p>
+
   </header>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <!--CONTAINER SECTION-->
+  <div class="container">
+   
+    <div class="box">
+     <h3>Supervisor</h3>
+     <p>Monitors activity to identify project roadblocks</p>
+   </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+   <div class="box">
+     <h3>Team Builder</h3>
+     <p> Scans our talent network to create the optimal team for your project</p>
+   </div>
+   
+   <div class="box">
+     <h3>Karma</h3>
+     <p>Regularly evaluates our talent to ensure quality</p>
+   </div>
+   
+   <div class="box">
+     <h3>Calculator</h3>
+     <p> Uses data from past projects to provide better delivery estimates</p>
+   </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  
 
   
   <footer>
