--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
     <div class="box">
      <h3>Supervisor</h3>
      <p>Monitors activity to identify project roadblocks</p>
+     <img src="images/icon-supervisor.svg">
    </div>
 
    <div class="box">
      <h3>Team Builder</h3>
      <p> Scans our talent network to create the optimal team for your project</p>
+     <img src="images/icon-team-builder.svg">
    </div>
    
    <div class="box">
      <h3>Karma</h3>
      <p>Regularly evaluates our talent to ensure quality</p>
+     <img src="images/icon-karma.svg">
    </div>
    
    <div class="box">
      <h3>Calculator</h3>
      <p> Uses data from past projects to provide better delivery estimates</p>
+     <img src="images/icon-calculator.svg">
    </div>
 
   </div>
@@ -55,7 +59,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://twitter.com/iduvancho">Duvan Flores</a>.
     </p>
   </footer>
 </body>
