--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
 
     <h1>Reliable, efficient delivery</h1>
-    <h1>Powered by Technology</h1>
+    <h1 class="strong">Powered by Technology</h1>
 
     <p>Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful
