--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
   <!--CONTAINER SECTION-->
   <div class="container">
    
-    <div class="box">
+    <div class="box box-red">
      <h3>Supervisor</h3>
      <p>Monitors activity to identify project roadblocks</p>
      <img src="images/icon-supervisor.svg" alt="supervisor">
    </div>
 
-   <div class="box">
+   <div class="box box-cyan">
      <h3>Team Builder</h3>
      <p> Scans our talent network to create the optimal team for your project</p>
      <img src="images/icon-team-builder.svg" alt="team-builder">
    </div>
    
-   <div class="box">
+   <div class="box box-orange">
      <h3>Karma</h3>
      <p>Regularly evaluates our talent to ensure quality</p>
      <img src="images/icon-karma.svg" alt="karma">
    </div>
    
-   <div class="box">
+   <div class="box box-blue">
      <h3>Calculator</h3>
      <p> Uses data from past projects to provide better delivery estimates</p>
      <img src="images/icon-calculator.svg" alt="calculator">  
